fix: consertando problemas